# konduit_installer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clayman.cpp  clayman.hpp  components.cpp  components.hpp  embed.c  embed.c.in  embed.h  embed.h.in  generate_embed_files.cmake  main.cpp  main.hpp  utils.cpp  utils.hpp
.github/workflows/: build.yml
include/raylib/: clay_renderer_raylib.c  clay_renderer_raylib.h  rres-raylib.h  rres-raylib_impl.c  rres_impl.c
include/sdl2/: clay_renderer_SDL2.c
include/sdl3/: clay_renderer_SDL3.c
installation/: encoding_handling.cpp  encoding_handling.hpp
test_assets/: test.rres
ui/: components.cpp
